--- a/scraper/requirements.txt
+++ b/scraper/requirements.txt
@@ -3,4 +3,5 @@ gunicorn==20.0.4
 selenium==3.141.0
 chromedriver-binary==83.0.4103.39
 fuzzywuzzy==0.18.0
+python-Levenshtein==0.12.0
 beautifulsoup4==4.9.1
