--- a/extension_bundle/manifest.json
+++ b/extension_bundle/manifest.json
@@ -2,19 +2,14 @@
     "manifest_version": 2,
     "name": "Scholar Stats",
     "version": "1.0",
-    "background":{
-        "scripts": ["background.js"]
-      },
     "browser_action": {
-        "default_icon": "icon.png",
-        "persistent": true
+      "default_icon": "icon.png"
     },
     "content_scripts": [
         {
-          "matches": [
-            "*://scholar.google.com/citations?user*"
-          ],
+          "matches": ["<all_urls>"],
           "js": ["content.js"]
         }
-      ]
-}
+      ],
+    "permissions": ["tabs"]
+    }
