--- a/scraper/cloudbuild.yaml
+++ b/scraper/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
       args:
       - 'run'
       - 'deploy'
-      - 'scholar-scraper'
+      - 'scholarscraper'
       - '--image'
       - 'gcr.io/scholar-scraper/scholar_scraper'
       - '--region'
